// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingChart is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingChart testClass1 testClass2 css-1ho1qj7-euiLoadingChart-m"
  data-test-subj="test subject string"
  role="progressbar"
>
  <span
    class="css-qzygck-euiLoadingChart__bar-m"
  />
  <span
    class="css-1t3f050-euiLoadingChart__bar-m"
  />
  <span
    class="css-1acavo4-euiLoadingChart__bar-m"
  />
  <span
    class="css-1hseqk6-euiLoadingChart__bar-m"
  />
</span>
`;

exports[`EuiLoadingChart mono is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingChart euiLoadingChart--mono css-1ho1qj7-euiLoadingChart-m"
  role="progressbar"
>
  <span
    class="css-1rs9n6s-euiLoadingChart__bar-m"
  />
  <span
    class="css-1a748g5-euiLoadingChart__bar-m"
  />
  <span
    class="css-1i8a6bb-euiLoadingChart__bar-m"
  />
  <span
    class="css-1rml83h-euiLoadingChart__bar-m"
  />
</span>
`;

exports[`EuiLoadingChart size l is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingChart css-1xdgh7e-euiLoadingChart-l"
  role="progressbar"
>
  <span
    class="css-1r25chp-euiLoadingChart__bar-l"
  />
  <span
    class="css-d1ua6g-euiLoadingChart__bar-l"
  />
  <span
    class="css-wnmrhk-euiLoadingChart__bar-l"
  />
  <span
    class="css-ed6dhr-euiLoadingChart__bar-l"
  />
</span>
`;

exports[`EuiLoadingChart size m is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingChart css-1ho1qj7-euiLoadingChart-m"
  role="progressbar"
>
  <span
    class="css-qzygck-euiLoadingChart__bar-m"
  />
  <span
    class="css-1t3f050-euiLoadingChart__bar-m"
  />
  <span
    class="css-1acavo4-euiLoadingChart__bar-m"
  />
  <span
    class="css-1hseqk6-euiLoadingChart__bar-m"
  />
</span>
`;

exports[`EuiLoadingChart size xl is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingChart css-wh2pju-euiLoadingChart-xl"
  role="progressbar"
>
  <span
    class="css-n8hx24-euiLoadingChart__bar-xl"
  />
  <span
    class="css-12941ie-euiLoadingChart__bar-xl"
  />
  <span
    class="css-5c2sgv-euiLoadingChart__bar-xl"
  />
  <span
    class="css-1o6b1bz-euiLoadingChart__bar-xl"
  />
</span>
`;
